add candidate
