# candidate/src/main/java/ru/offer/candidate/dto/CandidateCreatedEvent.java
@@ -1,0 +1,11 @@
+package ru.offer.candidate.dto;
+
+import java.math.BigDecimal;
+
+public record CandidateCreatedEvent(
+        Long id,
+        String name,
+        String level,
+        Integer experienceYears,
+        BigDecimal currentSalary
+) {}
